--- a/LaunchAgents/me.mayeu.script.OmniHabitica.plist
+++ b/LaunchAgents/me.mayeu.script.OmniHabitica.plist
@@ -5,18 +5,18 @@
     <key>EnvironmentVariables</key>
     <dict>
       <key>PATH</key>
-      <string>/Users/m/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/sbin</string>
+      <string>~/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/sbin</string>
     </dict>
     <key>Label</key>
     <string>me.mayeu.script.OmniHabitica</string>
     <key>ProgramArguments</key>
     <array>
       <string>/usr/local/bin/run-one</string>
-      <string>/Users/m/Documents/code/omnifocus-level-up/done_task_hook.sh</string>
+      <string>~/code/omnifocus-level-up/bin/omnitohabitica.sh</string>
     </array>
     <key>WatchPaths</key>
     <array>
-      <string>/Users/m/Library/Containers/com.omnigroup.OmniFocus3/Data/Library/Application Support/OmniFocus/OmniFocus.ofocus</string>
+      <string>~/Library/Containers/com.omnigroup.OmniFocus3/Data/Library/Application Support/OmniFocus/OmniFocus.ofocus</string>
     </array>
     <key>StandardOutPath</key>
     <string>/Users/m/Library/Logs/me.mayeu.script.OmniHabitica.log</string>
